# Node-Classification-on-Citation-Graphs--GCN-vs-GraphSAGE-vs-GAT

./: README.md  pyproject.toml  requirements.txt
configs/: benchmark_planetoid.yaml  gat_cora.yaml  gcn_cora.yaml  graphsage_cora.yaml
scripts/: export_latex_table.py  plot_results.py  run_benchmark.py  summarize_results.py  train.py
src/citation_gnn_benchmark/: __init__.py  config.py  data.py  experiment.py  metrics.py  models.py  trainer.py  utils.py
